--- a/src/main/java/com/fulinlin/ui/central/CentralSettingPanel.form
+++ b/src/main/java/com/fulinlin/ui/central/CentralSettingPanel.form
@@ -8,62 +8,81 @@
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="3fd73" binding="typeStylePanel" layout-manager="GridLayoutManager" row-count="2" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="3fd73" binding="typePanel" layout-manager="GridLayoutManager" row-count="2" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
-        <border type="none" title="Setting Type Display Style"/>
+        <border type="none" title="Type Display Option"/>
         <children>
-          <component id="fa99d" class="javax.swing.JRadioButton" binding="selectRadioButton" default-binding="true">
+          <component id="fa99d" class="javax.swing.JRadioButton" binding="typeSelectionRadioButton">
             <constraints>
-              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="select"/>
+              <text value="Selection:"/>
             </properties>
           </component>
-          <component id="943ff" class="javax.swing.JRadioButton" binding="mixingTheTwoRadioButton" default-binding="true">
+          <component id="fff5a" class="javax.swing.JLabel" binding="typeDisplayNumberLabel">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Selection display number:"/>
+            </properties>
+          </component>
+          <component id="ea2a5" class="javax.swing.JLabel" binding="typeDiskPlayStyleLabel">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Type display style:"/>
+            </properties>
+          </component>
+          <component id="943ff" class="javax.swing.JRadioButton" binding="typeMixingRadioButton">
             <constraints>
               <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="mixing the two"/>
+              <text value="Mixing"/>
             </properties>
           </component>
-          <component id="e221" class="javax.swing.JLabel">
+          <hspacer id="50f68">
             <constraints>
-              <grid row="0" column="0" row-span="2" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties>
-              <text value="type style:"/>
-            </properties>
+          </hspacer>
+          <component id="c3a79" class="com.intellij.ui.JBIntSpinner" binding="typeDisplayNumberSpinner" custom-create="true">
+            <constraints>
+              <grid row="1" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
           </component>
-          <component id="1b0a4" class="javax.swing.JRadioButton" binding="dropDownRadioButton" default-binding="true">
+          <component id="1b0a4" class="javax.swing.JRadioButton" binding="typeDropDownRadioButton">
             <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="drop-down"/>
+              <text value="Drop-down"/>
             </properties>
           </component>
         </children>
       </grid>
-      <grid id="c3c91" binding="skipCiPanel" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="c3c91" binding="skipCiPanel" layout-manager="GridLayoutManager" row-count="2" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
-        <border type="none" title="Setting Skip CI"/>
+        <border type="none" title="Skip CI Option"/>
         <children>
-          <component id="5d262" class="javax.swing.JLabel">
+          <component id="5d262" class="javax.swing.JLabel" binding="skipCiDefaultValueLabel">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Skip CI:"/>
+              <text value="Default value:  "/>
             </properties>
           </component>
           <component id="10835" class="javax.swing.JComboBox" binding="skipCiComboBox">
@@ -74,22 +93,35 @@
               <model/>
             </properties>
           </component>
-          <component id="7643d" class="javax.swing.JCheckBox" binding="defaultCheckCheckBox" default-binding="true">
+          <component id="7643d" class="javax.swing.JCheckBox" binding="skipCiDefaultCheckedCheckedBox">
             <constraints>
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="default check  "/>
+              <text value="Default checked"/>
             </properties>
           </component>
-          <component id="702ba" class="javax.swing.JCheckBox" binding="selectCheckBox" default-binding="true">
+          <component id="702ba" class="javax.swing.JCheckBox" binding="skipCiEnableCheckBox">
             <constraints>
-              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="select"/>
+              <text value="Enable"/>
             </properties>
           </component>
+          <component id="54df" class="javax.swing.JLabel" binding="skipEnableSelectionLabel">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Enable selection:"/>
+            </properties>
+          </component>
+          <hspacer id="d513b">
+            <constraints>
+              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </hspacer>
         </children>
       </grid>
       <vspacer id="43ad4">
@@ -97,7 +129,7 @@
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
-      <grid id="eda0b" binding="hiddenPanel" layout-manager="GridLayoutManager" row-count="1" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="eda0b" binding="hiddenPanel" layout-manager="GridLayoutManager" row-count="2" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -105,7 +137,7 @@
         <properties>
           <name value=""/>
         </properties>
-        <border type="none" title="Hidden"/>
+        <border type="none" title="Hidden Option"/>
         <children>
           <component id="822cb" class="javax.swing.JCheckBox" binding="typeCheckBox" default-binding="true">
             <constraints>
@@ -141,7 +173,7 @@
           </component>
           <component id="eaeac" class="javax.swing.JCheckBox" binding="changesCheckBox" default-binding="true">
             <constraints>
-              <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="changes"/>
@@ -149,7 +181,7 @@
           </component>
           <component id="4bdb1" class="javax.swing.JCheckBox" binding="closedCheckBox" default-binding="true">
             <constraints>
-              <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="closed"/>
@@ -157,12 +189,17 @@
           </component>
           <component id="a98c7" class="javax.swing.JCheckBox" binding="skipCiCheckBox" default-binding="true">
             <constraints>
-              <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="skip ci"/>
             </properties>
           </component>
+          <hspacer id="919c4">
+            <constraints>
+              <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </hspacer>
         </children>
       </grid>
     </children>
