--- a/src/main/java/com/fulinlin/ui/central/CentralSettingPanel.form
+++ b/src/main/java/com/fulinlin/ui/central/CentralSettingPanel.form
@@ -16,12 +16,12 @@
         <properties/>
         <border type="none" title="Type Display Option"/>
         <children>
-          <component id="fa99d" class="javax.swing.JRadioButton" binding="typeSelectionRadioButton">
+          <component id="fa99d" class="javax.swing.JRadioButton" binding="typeRadioRadioButton">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Selection:"/>
+              <text value="Radio"/>
             </properties>
           </component>
           <component id="fff5a" class="javax.swing.JLabel" binding="typeDisplayNumberLabel">
@@ -29,7 +29,7 @@
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Selection display number:"/>
+              <text value="Radio display number:"/>
             </properties>
           </component>
           <component id="ea2a5" class="javax.swing.JLabel" binding="typeDiskPlayStyleLabel">
@@ -59,12 +59,12 @@
             </constraints>
             <properties/>
           </component>
-          <component id="1b0a4" class="javax.swing.JRadioButton" binding="typeDropDownRadioButton">
+          <component id="1b0a4" class="javax.swing.JRadioButton" binding="typeCheckboxRadioButton">
             <constraints>
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Drop-down"/>
+              <text value="Checkbox"/>
             </properties>
           </component>
         </children>
@@ -114,7 +114,7 @@
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Enable selection:"/>
+              <text value="Enable checkbox:"/>
             </properties>
           </component>
           <hspacer id="d513b">
