feature: 完善skip ci 逻辑

--- a/src/main/resources/includes/defaultDescription.html
+++ b/src/main/resources/includes/defaultDescription.html
@@ -23,7 +23,7 @@
         <td width="10">&nbsp;</td>
         <td width="100%" valign="top">
             <font face="verdana" size="-1">
-                ${globals.get('setting.template.type')}
+                ${globals.get('setting.template.description.type')}
             </font>
         </td>
     </tr>
@@ -34,7 +34,7 @@
         <td width="10">&nbsp;</td>
         <td width="100%" valign="top">
             <font face="verdana" size="-1">
-                ${globals.get('setting.template.scope')}
+                ${globals.get('setting.template.description.scope')}
             </font>
         </td>
     </tr>
@@ -45,7 +45,7 @@
         <td width="10">&nbsp;</td>
         <td width="100%" valign="top">
             <font face="verdana" size="-1">
-                ${globals.get('setting.template.subject')}
+                ${globals.get('setting.template.description.subject')}
             </font>
         </td>
     </tr>
@@ -56,7 +56,7 @@
         <td width="10">&nbsp;</td>
         <td width="100%" valign="top">
             <font face="verdana" size="-1">
-                ${globals.get('setting.template.body')}
+                ${globals.get('setting.template.description.body')}
             </font>
         </td>
     </tr>
@@ -67,7 +67,7 @@
         <td width="10">&nbsp;</td>
         <td width="100%" valign="top">
             <font face="verdana" size="-1">
-                ${globals.get('setting.template.changes')}
+                ${globals.get('setting.template.description.changes')}
             </font>
         </td>
     </tr>
@@ -78,7 +78,18 @@
         <td width="10">&nbsp;</td>
         <td width="100%" valign="top">
             <font face="verdana" size="-1">
-                ${globals.get('setting.template.closes')}
+                ${globals.get('setting.template.description.closes')}
+            </font>
+        </td>
+    </tr>
+    <tr>
+        <td valign="top">
+            <nobr><font face="verdana" size="-2"><b>${skipCi}</b></font></nobr>
+        </td>
+        <td width="10">&nbsp;</td>
+        <td width="100%" valign="top">
+            <font face="verdana" size="-1">
+                ${globals.get('setting.template.description.skip.ci')}
             </font>
         </td>
     </tr>
@@ -89,7 +100,7 @@
         <td width="10">&nbsp;</td>
         <td width="100%" valign="top">
             <font face="verdana" size="-1">
-                ${globals.get('setting.template.newLine')}
+                ${globals.get('setting.template.description.newLine')}
             </font>
         </td>
     </tr>
