--- a/src/main/resources/includes/defaultTemplate.vm
+++ b/src/main/resources/includes/defaultTemplate.vm
@@ -2,3 +2,4 @@
 #if($body)${newline}${newline}${body}#end
 #if($changes)${newline}${newline}BREAKING CHANGE: ${changes}#end
 #if($closes)${newline}${newline}Closes ${closes}#end
+#if($skipCi)${newline}${newline}${skipCi}#end
