--- a/src/main/java/com/fulinlin/ui/central/CentralSettingPanel.form
+++ b/src/main/java/com/fulinlin/ui/central/CentralSettingPanel.form
@@ -93,12 +93,12 @@
               <model/>
             </properties>
           </component>
-          <component id="7643d" class="javax.swing.JCheckBox" binding="skipCiDefaultCheckedCheckedBox">
+          <component id="7643d" class="javax.swing.JCheckBox" binding="skipCiDefaultApproveCheckedBox">
             <constraints>
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Default checked"/>
+              <text value="Default approve"/>
             </properties>
           </component>
           <component id="702ba" class="javax.swing.JCheckBox" binding="skipCiEnableCheckBox">
@@ -109,12 +109,12 @@
               <text value="Enable"/>
             </properties>
           </component>
-          <component id="54df" class="javax.swing.JLabel" binding="skipEnableSelectionLabel">
+          <component id="54df" class="javax.swing.JLabel" binding="skipEnableComboboxLabel">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Enable checkbox:"/>
+              <text value="Enable combobox:"/>
             </properties>
           </component>
           <hspacer id="d513b">
