🐛fix: 修复排版问题

--- a/src/main/java/com/fulinlin/ui/commit/CommitPanel.form
+++ b/src/main/java/com/fulinlin/ui/commit/CommitPanel.form
@@ -62,9 +62,7 @@
       </component>
       <component id="c313a" class="javax.swing.JLabel" binding="changeDescriptionLabel">
         <constraints>
-          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="115" height="21"/>
-          </grid>
+          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Breaking changes:"/>
