--- a/src/main/java/com/fulinlin/ui/setting/TemplateEditPanel.form
+++ b/src/main/java/com/fulinlin/ui/setting/TemplateEditPanel.form
@@ -136,7 +136,7 @@
                     <border type="none"/>
                     <children/>
                   </grid>
-                  <grid id="f209d" layout-manager="GridLayoutManager" row-count="1" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                  <grid id="f209d" layout-manager="GridLayoutManager" row-count="1" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="700"/>
                     <constraints>
                       <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -196,6 +196,15 @@
                         <properties>
                           <selected value="true"/>
                           <text value="scope"/>
+                        </properties>
+                      </component>
+                      <component id="c62e3" class="javax.swing.JCheckBox" binding="skipCiCheckBox" default-binding="true">
+                        <constraints>
+                          <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <selected value="true"/>
+                          <text value="skip ci"/>
                         </properties>
                       </component>
                     </children>
