--- a/src/main/java/com/fulinlin/ui/central/CentralSettingPanel.form
+++ b/src/main/java/com/fulinlin/ui/central/CentralSettingPanel.form
@@ -30,6 +30,7 @@
             </constraints>
             <properties>
               <text value="Radio display number:"/>
+              <toolTipText value="1212121212"/>
             </properties>
           </component>
           <component id="ea2a5" class="javax.swing.JLabel" binding="typeDiskPlayStyleLabel">
@@ -57,7 +58,9 @@
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties/>
+            <properties>
+              <toolTipText value=""/>
+            </properties>
           </component>
           <component id="1b0a4" class="javax.swing.JRadioButton" binding="typeCheckboxRadioButton">
             <constraints>
