--- a/src/main/java/com/fulinlin/ui/central/CentralSettingPanel.form
+++ b/src/main/java/com/fulinlin/ui/central/CentralSettingPanel.form
@@ -62,12 +62,12 @@
               <toolTipText value=""/>
             </properties>
           </component>
-          <component id="1b0a4" class="javax.swing.JRadioButton" binding="typeCheckboxRadioButton">
+          <component id="1b0a4" class="javax.swing.JRadioButton" binding="typeComboboxRadioButton">
             <constraints>
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Checkbox"/>
+              <text value="Combobox"/>
             </properties>
           </component>
         </children>
