fix: 修复样式问题

--- a/src/main/resources/includes/defaultDescription.html
+++ b/src/main/resources/includes/defaultDescription.html
@@ -110,7 +110,7 @@
     <a href='http://velocity.apache.org/engine/devel/user-guide.html#Velocity_Template_Language_VTL:_An_Introduction'>
         Apache Velocity
     </a>
-    ${globals.get('setting.template.used')}
+    ${globals.get('setting.template.description.used')}
 </font>
 </body>
 </html>
