--- a/src/main/java/com/fulinlin/ui/setting/TemplateEditPanel.form
+++ b/src/main/java/com/fulinlin/ui/setting/TemplateEditPanel.form
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.fulinlin.ui.setting.TemplateEditPanel">
-  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="19" y="36" width="1827" height="642"/>
     </constraints>
     <properties>
+      <minimumSize width="500" height="283"/>
       <opaque value="true"/>
+      <preferredSize width="800" height="283"/>
     </properties>
     <border type="none"/>
     <children>
@@ -49,7 +51,10 @@
             <constraints>
               <tabbedpane title="Template"/>
             </constraints>
-            <properties/>
+            <properties>
+              <minimumSize width="550" height="283"/>
+              <preferredSize width="550" height="283"/>
+            </properties>
             <border type="none"/>
             <children>
               <grid id="b6958" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -244,11 +249,6 @@
           </grid>
         </children>
       </tabbedpane>
-      <hspacer id="ad0d4">
-        <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </hspacer>
     </children>
   </grid>
 </form>
